# MyLambda

./: .gitignore  README.md
hello_lambda/: Cargo.toml
hello_lambda/src/: main.rs
hello_lambda_tf/: main.tf
