[package]
name = "hello_lambda"
version = "0.1.0"
edition = "2018"
autobins = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.4"
aws-config = "0.9.0"
# We are using the Amazon Simple Storage Service (Amazon S3) crate in this example,
# but you can use any SDK crate in your Lambda code.
aws-sdk-s3 = "0.9.0"
time = { version = "0.3.7", default-features = false }

[[bin]]
name  = "bootstrap"
path = "src/main.rs"
